chore: Diminuindo placeholder e removendo hint

--- a/index.html
+++ b/index.html
@@ -361,17 +361,10 @@
             </svg>
            <textarea
   id="epigrafe"
-  placeholder="Digite a citação e o autor
-Exemplo:
-&quot;A persistência é o caminho do êxito.&quot;
-
-(Charles Chaplin)"
+  placeholder="Epígrafe"
   class="form-input"
   rows="6"
 ></textarea>
-<small class="field-hint">
-  ✨ Dica: Adicione a citação e, após uma linha em branco, coloque o autor entre parênteses
-</small>
           </div>
         </div>
         <div class="input-group full-width">
